===============
Stalker Changes
===============

0.2.0.b7
========

* **SOM**:

  * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
    correctly.
  * **Fix:** **check_circular_dependency()** now checks if the **entity** and
    the **other_entity** are the same.
  * **Fix:** **Task.to_tjp()** now correctly add the dependent tasks of a
    container task.
  * **Fix:** **Task.__eq__()** now correctly considers the parent, depends and
    children Tasks.
  * **Update:** **Task.priority** is now reflected in tjp file if it is
    different than the default value (500).

* **WebUI:**

  * **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
    only the children and parents of that Task derivative.
  * **Update:** Task create/update dialog now displays the full hierarchy in
    parent/dependent task listings.
  * **Fix:** TimeLog create/update dialog now displays the default times
    correctly when creating a new TimeLog.
  * **Fix:** TimeLog create/update view callables are now checking if there
    will be any OverBookedError raised.
  * **Fix:** Task create/update dialog now will not list the task itself in
    parent and dependent task lists, if the UI is called with a Task instance
    ({{task}} is not None).
  * **Update:** For Asset Page and Task Page tab order is changed.
  * **New:** Starts and Ends attributes are added to Task Summary Page.
  * **Update:** List of Users, Departments and Groups are now sorted by using
    the name of the entity.
  * **Update:** Task create/update dialog now has a new field called
    ``priority``.
  * **Update:** **Task.schedule_constraint** is now filled with correct
    information when creating/updating a Task.
  * **JQueryGantt:**
  
    * **Update:** Context menu can now be opened in task names in grid editor.
    * **Update:** Optimized the creation of task rows.
    * **Update:** Replaced the ``input`` elements with ``div`` in the task row.