@@ -206,23 +206,23 @@ class TaskJugglerSchedulerTester(unittest2.TestCase):
         
         # clean up the test
         tjp_sched._clean_up()
-    
+
     def test_tjp_file_content_is_correct(self):
         """testing if the tjp file content is correct
         """
         tjp_sched = TaskJugglerScheduler()
         test_studio = Studio(name='Test Studio')
         test_studio.daily_working_hours = 9
-        
+
         test_studio.id = 564
         test_studio.start = datetime.datetime(2013, 4, 16, 0, 7)
         test_studio.end = datetime.datetime(2013, 6, 30, 0, 0)
         test_studio.now = datetime.datetime(2013, 4, 16, 0, 0)
         tjp_sched.studio = test_studio
-        
+
         tjp_sched._create_tjp_file()
         tjp_sched._create_tjp_file_content()
-        
+
         import jinja2
         expected_tjp_template = jinja2.Template(
         """# Generated By Stalker v{{stalker.__version__}}
@@ -260,6 +260,7 @@ class TaskJugglerSchedulerTester(unittest2.TestCase):
             task Project_28 "Test Project 1" {
             
                 task Task_29 "Task1" {
+        
             
             effort 50.0h
             allocate User_12, User_14
@@ -267,6 +268,7 @@ class TaskJugglerSchedulerTester(unittest2.TestCase):
         
             
                 task Task_30 "Task2" {
+        
             
             effort 60.0h
             allocate User_12, User_14
