@@ -21,7 +21,7 @@
 import datetime
 import unittest2
 
-from stalker import User
+from stalker import User, Type
 from stalker.models.studio import Vacation
 
 
@@ -40,10 +40,109 @@ class VacationTestCase(unittest2.TestCase):
             password='secret',
         )
 
+        # vacation type
+        self.personal_vacation = Type(
+            name='Personal',
+            code='PERS',
+            target_entity_type='Vacation'
+        )
+
+        self.studio_vacation = Type(
+            name='Studio Wide',
+            code='STD',
+            target_entity_type='Vacation'
+        )
+
         self.kwargs = {
+            'user': self.test_user,
+            'type': self.personal_vacation,
             'start': datetime.datetime(2013, 6, 6, 10, 0),
             'end': datetime.datetime(2013, 6, 10, 19, 0)
         }
 
         self.test_vacation = Vacation(**self.kwargs)
 
+    def test_strictly_typed_is_True(self):
+        """testing if the __strictly_typed_ attribute is True for Vacation
+        class
+        """
+        self.assertTrue(
+            Vacation.__strictly_typed__,
+            True
+        )
+
+    def test_user_argument_is_skipped(self):
+        """testing if a TypeError will be raised when the user argument is
+         skipped
+        """
+        self.kwargs.pop('user')
+        self.assertRaises(TypeError, Vacation, **self.kwargs)
+
+    def test_user_argument_is_None(self):
+        """testing if a TypeError will be raised when the user argument is None
+        """
+        self.kwargs['user'] = None
+        self.assertRaises(TypeError, Vacation, **self.kwargs)
+
+    def test_user_attribute_is_None(self):
+        """testing if a TypeError will be raised when the user attribute is set
+        to None
+        """
+        self.assertRaises(TypeError, setattr, self.test_vacation, 'user', None)
+
+    def test_user_argument_is_not_a_User_instance(self):
+        """testing if a TypeError will be raised when the user argument is not
+        a stalker.models.auth.User instance
+        """
+        self.kwargs['user'] = 'not a user instance'
+        self.assertRaises(TypeError, Vacation, **self.kwargs)
+
+    def test_user_attribute_is_not_a_User_instance(self):
+        """testing if a TypeError will be raised when the user attribute is set
+        to a value which is not a stalker.models.auth.User instance
+        """
+        self.assertRaises(TypeError, setattr, self.test_vacation, 'user',
+                          'not a user instance')
+
+    def test_user_argument_is_working_properly(self):
+        """testing if the user argument value is correctly passed to the user
+        attribute
+        """
+        self.assertEqual(self.kwargs['user'], self.test_vacation.user)
+
+    def test_user_attribute_is_working_properly(self):
+        """testing if the user attribute is working properly
+        """
+        new_user = User(
+            name='test user 2',
+            login='testuser2',
+            email='test@user.com',
+            password='secret'
+        )
+
+        self.assertNotEqual(self.test_vacation.user, new_user)
+        self.test_vacation.user = new_user
+        self.assertEqual(self.test_vacation.user, new_user)
+
+    def test_user_argument_back_populates_vacations_attribute(self):
+        """testing if the user argument back populates vacations attribute of
+        the User instance
+        """
+        self.assertIn(
+            self.test_vacation,
+            self.kwargs['user'].vacations
+        )
+
+    def test_user_attribute_back_populates_vacations_attribute(self):
+        """testing if the user attribute back populates vacations attribute of
+        the User instance
+        """
+        new_user = User(
+            name='test user 2',
+            login='testuser2',
+            email='test@user.com',
+            password='secret'
+        )
+
+        self.test_vacation.user = new_user
+        self.assertIn(self.test_vacation, new_user.vacations)
