@@ -5,7 +5,7 @@ Stalker Changes
 0.2.0.b7
 ========
 
-* **SOM**:
+* **SOM:**
 
   * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
     correctly.
@@ -17,6 +17,7 @@ Stalker Changes
     children Tasks.
   * **Update:** **Task.priority** is now reflected in tjp file if it is
     different than the default value (500).
+  * **New::** Added a new class called **Vacation** to hold user vacations.
 
 * **WebUI:**
 
